[package]
name = "zerotier_central"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.0"
futures-core = "0.3"
progenitor-client = "0.8.0"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
show-option = "0.1.0"
